k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fh-swf-mcp-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fh-swf-mcp
  template:
    metadata:
      labels:
        app: fh-swf-mcp
    spec:
      automountServiceAccountToken: false
      containers:
      - name: fh-swf-mcp
        image: fh-swf-mcp:latest
        ports:
          - containerPort: 8000
        volumeMounts:
          - mountPath: /app/data
        name: data-volume 
      volumes:
      - name: data-volume
        persistentVolumeClaim:
          claimName: data-pvc 

---
apiVersion: v1
kind: Service
metadata:
  name: fh-swf-mcp-service
spec:
  selector:
    app: fh-swf-mcp
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
