k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: https-ingress
  namespace: mcp
  annotations:
    traefik.frontend.passHostHeader: 'true'
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  rules:
  - host: mcp.gawron.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fh-swf-mcp-service
            port:
              number: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fh-swf-ingress
  namespace: mcp
  annotations:
    traefik.frontend.passHostHeader: 'true'
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  rules:
  - host: mcp.fh-swf.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fh-swf-mcp-service
            port:
              number: 8000
